# to_gif

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: compliance_scan.yml
include/: idecoder.hpp  iencoder.hpp  ipipeline_factory.hpp  iquantizer.hpp  isearch_strategy.hpp
include/common/: constants.hpp  types.hpp
include/components/: ffmpeg_decoder.hpp  giflib_encoder.hpp  imagequant_quantizer.hpp
include/factories/: default_pipeline_factory.hpp
include/optimizer/: parameter_optimizer.hpp  predictive_search.hpp
include/pipeline/: gif_pipeline.hpp
include/utils/: file_utils.hpp  logger.hpp  math_utils.hpp
scripts/: compile.sh  install_dependencies.sh
src/: main.cpp
src/common/: types.cpp
src/components/: ffmpeg_decoder.cpp  giflib_encoder.cpp  imagequant_quantizer.cpp
src/factories/: default_pipeline_factory.cpp
src/optimizer/: parameter_optimizer.cpp  predictive_search.cpp
src/pipeline/: gif_pipeline.cpp
src/utils/: file_utils.cpp  logger.cpp  math_utils.cpp
tests/: test_config_validate.cpp  test_file_utils.cpp  test_gif_pipeline.cpp  test_logger.cpp  test_math_utils.cpp  test_parameter_optimizer.cpp  test_predictive_search.cpp
